--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Choir</title>
+  <title>Coastal Chorale</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Our Choir</h1>
-  <p>This is the official website of [Your Choir Name].</p>
+  <h1>Coastal Chorale!</h1>
+  <p>This is the official website of Coastal Chorale.</p>
 </body>
 </html>
